<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.teamtators.pitscout.ui.CommentsActivity">
    <item
        android:id="@+id/action_take_picture"
        android:icon="@drawable/ic_action_image_camera_alt"
        android:orderInCategory="10"
        android:title="@string/action_take_picture"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_done"
        android:icon="@drawable/ic_action_done"
        android:orderInCategory="50"
        android:title="@string/label_done"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
